# python-project-83

./: .gitignore  Makefile  README.md  build.sh  database.sql  migrate.py  pyproject.toml  ruff.toml
.github/workflows/: pyci.yaml
page_analyzer/: app.py  html_parser.py  models.py
page_analyzer/static/css/: style.css
page_analyzer/templates/: base.html  index.html  url.html  url_detail.html  urls.html
